# new_path

./: README.md  test.txt
hcm_etl_pipeline/: pyproject.toml
hcm_etl_pipeline/conf/data_contracts/: employee_master_v1.yaml  employee_master_v1.yaml:Zone.Identifier  payroll_transactions_v1.yaml  payroll_transactions_v1.yaml:Zone.Identifier
hcm_etl_pipeline/conf/env/: dev.yaml  dev.yaml:Zone.Identifier
hcm_etl_pipeline/dags/: employee_master_pipeline_dag.py  employee_master_pipeline_dag.py:Zone.Identifier
hcm_etl_pipeline/hcm_etl_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hcm_etl_pipeline/scripts/: generate_datasets.py
hcm_etl_pipeline/src/common/: alert_notifier.py  config_loader.py  logger.py  spark_session.py  utils.py
hcm_etl_pipeline/src/ingestion/: dq_checker.py  dq_checker.py:Zone.Identifier  manifest_validator.py  manifest_validator.py:Zone.Identifier  pipeline_runner.py  quarantine_writer.py  quarantine_writer.py:Zone.Identifier  raw_writer.py  raw_writer.py:Zone.Identifier  schema_enforcer.py  schema_enforcer.py:Zone.Identifier
hcm_etl_pipeline/tests/fixtures/: employee_master_20240115.csv:Zone.Identifier  payroll_transactions_20240115.csv:Zone.Identifier
pd-agent-project/src/: dataset_generation.ipynb
